Add route find a pokemon and doc
